--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
     <section class="about block" id="about">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12 col-md-4 about-img">
+                <div class="col-12 col-md-12 col-lg-4 about-img">
                     <img src="assets/img/about.png">
                 </div>
-                <div class="col-12 col-md-8">
+                <div class="col-12 col-md-12 col-lg-8">
                     <div class="about-intro">
                         <h2>ABOUT US</h2>
                         <p>We are Qarib, a company specialized in the field of cruises and leisure marine trips by providing solutions for booking those trips fulfilling the requirements of both the professionals and amateurs of this activity. We have taken the initiative by contributing to building and innovating smart solutions that carry easy access to the client's request by the creation of an innovative electronic application named Qareb featuring a lot of the services required in the maritime field in a uniquely modern way to benefit from the modern technical achievements in the information age.</p>
@@ -150,7 +150,7 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-12 col-md-4">
+                <div class="col-6 col-md-6 col-lg-4">
                     <div class="service">
                         <div class="outer-border">
                             <div class="white-border">
@@ -160,7 +160,7 @@
                         <p>Supporting customers to easily reach for the service.</p>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-6 col-md-6 col-lg-4">
                     <div class="service">
                         <div class="outer-border">
                             <div class="white-border">
@@ -170,7 +170,7 @@
                         <p>Uniting marine activities companies and potential clients together.</p>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-6 col-md-6 col-lg-4">
                     <div class="service">
                         <div class="outer-border">
                             <div class="white-border">
@@ -180,7 +180,7 @@
                         <p>Ease of access and reach for marine trips.</p>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-6 col-md-6 col-lg-4">
                     <div class="service">
                         <div class="outer-border">
                             <div class="white-border">
@@ -190,7 +190,7 @@
                         <p>Presence in coastal touristic cities in the Kingdom of Saudi Arabia.</p>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-6 col-md-6 col-lg-4">
                     <div class="service">
                         <div class="outer-border">
                             <div class="white-border">
@@ -200,7 +200,7 @@
                         <p>Easy payment methods.</p>
                     </div>
                 </div>
-                <div class="col-12 col-md-4">
+                <div class="col-6 col-md-6 col-lg-4">
                     <div class="service">
                         <div class="outer-border">
                             <div class="white-border">
