--- a/index-rtl.html
+++ b/index-rtl.html
@@ -62,7 +62,7 @@
 
         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">English</a>
+                            <a class="dropdown-item" href="/index.html">English</a>
                         </div>
                     </li>
 
@@ -75,7 +75,7 @@
 
         </a>
                             <div class="dropdown-menu language" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">English</a>
+                                <a class="dropdown-item" href="/index.html">English</a>
                             </div>
                         </li>
                     </ul>
@@ -92,7 +92,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-md-6 home-img">
-                    <img src="assets/img/page-ar.png" class="img-responsive" />
+                    <img src="assets/img/page-en-lg.png" class="img-responsive" />
                 </div>
                 <div class="col-12 col-md-6 home-content">
                     <h3>ما تريده يأتي إليك</h3>
@@ -126,14 +126,14 @@
         <div class="container-fluid">
             <div class="row">
                
-                <div class="col-12 col-md-8">
+                <div class="col-12 col-md-12 col-lg-8">
                     <div class="about-intro">
                         <h2>من نحن</h2>
                         <p>لقد أخذنا على عاتقنا المبادرة من خلال المساهمة في بناء وابتكار الحلول الذكية التي تحقق سهولة الوصول إلى طلب العميل تمثلت في إنشاء تطبيق الكتروني مبتكر اسمه قارب يضم الكثير من الخدمات المطلوبة في المجال البحري بطريقة .عصرية فريدة للاستفادة من إنجازات التقنية الحديثة في عصر المعلوماتية</p>
                         <p>فنحن نختصر لك الجهد والمسافات في عالم اتسم للسرعة في الإنجاز .لذلك نحن نتميز بالابتكار والتطوير لمواكبة العصر</p>
                     </div>
                 </div>
-                 <div class="col-12 col-md-4 about-img">
+                 <div class="col-12 col-md-12 col-lg-4 about-img">
                     <img src="assets/img/about.png">
                 </div>
                 <div class="col-12">
@@ -150,6 +150,7 @@
     <!-- Services Section Start -->
     <section class="services block" id="services">
         <div class="container">
+            <h2>خدماتنا</h2>
             <div class="row">
 
                 <div class="col-6 col-md-4">
