--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">العربية <span class="flag-icon flag-icon-sa"></span></a>
+                            <a class="dropdown-item" href="index-rtl.html">العربية <span class="flag-icon flag-icon-sa"></span></a>
                         </div>
                     </li>
 
@@ -75,7 +75,7 @@
 
         </a>
                             <div class="dropdown-menu language" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">العربية <span class="flag-icon flag-icon-sa"></span></a>
+                                <a class="dropdown-item" href="index-rtl.html">العربية <span class="flag-icon flag-icon-sa"></span></a>
                             </div>
                         </li>
                     </ul>
@@ -92,7 +92,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 col-md-6 home-img">
-                    <img src="assets/img/page-ar.png" class="img-responsive" />
+                    <img src="assets/img/page-ar-lg.png" class="img-responsive" />
                 </div>
                 <div class="col-12 col-md-6 home-content">
                     <h3>your requirements come right to you</h3>
@@ -148,6 +148,8 @@
     <!-- Services Section Start -->
     <section class="services block" id="services">
         <div class="container">
+            <h2>OUR SERVICES</h2>
+
             <div class="row">
 
                 <div class="col-6 col-md-6 col-lg-4">
